--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Inicio de sesion</h1>
-    <a href="inicio-sesion.html">Inicio</a>
-    <a href="eleccion-registro.html">Registro</a>
+    <h1>Pagina Principal de Inicio de sesion</h1>
+    <a href="{{ url_for('log.login') }}">login</a>
+    <a href="{{ url_for('registro.registroUsuario') }}">Registrarse</a>
 </body>
 </html>
