--- a/templates/registro_especialista.html
+++ b/templates/registro_especialista.html
@@ -9,7 +9,7 @@
 
     <!-- // -->
   <div>
-    <form class="form-control" action="acceso-login" method="post">
+    <form class="form-control" action="/acceso-login" method="POST">
 
         <div class="form-group">
           <label>Correo</label>
