--- a/templates/registro_paciente.html
+++ b/templates/registro_paciente.html
@@ -9,7 +9,7 @@
 
   <!-- // -->
   <div>
-    <form class="form-control" action="acceso-login" method="post">
+    <form action="/registro_paciente" method="POST" class="form-control">
 
         <div class="form-group">
           <label>Correo</label>
@@ -43,7 +43,7 @@
 
         <div class="form-group">
             <label>Fecha de Nacimiento</label>
-            <input type="date" class="form-control" name="txt-fechanac-pac">
+            <input type="date" class="form-control" name="txt-fechaNac-pac">
         </div>
 
         <div class="form-group">
