--- a/templates/registro_usuario.html
+++ b/templates/registro_usuario.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Soy un</h1>
-    <a href="registro-paciente.html">paciente</a>
-    <a href="registro-especialista.html">especialista</a>
+    <a href="{{ url_for('registro.registroPac') }}">paciente</a>
+    <a href="{{ url_for('registro.registroEsp') }}">especialista</a>
 </body>
 </html>
