--- a/templates/registro_especialista.html
+++ b/templates/registro_especialista.html
@@ -9,7 +9,7 @@
 
     <!-- // -->
   <div>
-    <form class="form-control" action="/acceso-login" method="POST">
+    <form action="/registro_especialista" method="POST" class="form-control">
 
         <div class="form-group">
           <label>Correo</label>
@@ -18,7 +18,7 @@
 
         <div class="form-group">
           <label>Nombre</label>
-          <input type="password" class="form-control" placeholder="Password" name="txt-nombre-esp">
+          <input type="text" class="form-control" placeholder="Password" name="txt-nombre-esp">
         </div>
 
         <div class="form-group">
@@ -28,7 +28,7 @@
 
         <div class="form-group">
             <label>Genero</label>
-            <input type="password" class="form-control" placeholder="Password" name="txt-genero-esp">
+            <input type="text" class="form-control" placeholder="Password" name="txt-genero-esp">
         </div>
         
         <div class="form-group">
@@ -48,7 +48,7 @@
 
         <div class="form-group">
             <label>Especialidad</label>
-            <input type="date" class="form-control" placeholder="Password" name="txt-especialidad-esp">
+            <input type="text" class="form-control" placeholder="Password" name="txt-especialidad-esp">
         </div>
 
         <button type="submit" class="btn btn-primary">Aceptar</button>
