--- a/templates/registro_paciente.html
+++ b/templates/registro_paciente.html
@@ -18,7 +18,7 @@
 
         <div class="form-group">
           <label>Nombre</label>
-          <input type="password" class="form-control" placeholder="Nombre" name="txt-nombre-pac">
+          <input type="text" class="form-control" placeholder="Nombre" name="txt-nombre-pac">
         </div>
 
         <div class="form-group">
@@ -28,7 +28,7 @@
 
         <div class="form-group">
             <label>Genero</label>
-            <input type="password" class="form-control" name="txt-genero-pac">
+            <input type="text" class="form-control" name="txt-genero-pac">
         </div>
         
         <div class="form-group">
