--- a/templates/perfil_paciente.html
+++ b/templates/perfil_paciente.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div>
-        <p>{{perfil.nombre}} <a href="/update">update</a></p> 
-        <p>{{perfil.apellido}} <a href="/update">update</a></p> 
-        <p>{{perfil.sexo}} <a href="/update">update</a></p> 
-        <p>{{perfil.fecha_nac}} <a href="/update">update</a></p> 
-        <p>{{perfil.correo}} <a href="/update">update</a></p> 
-        <p>{{perfil.direccion}} <a href="/update">update</a></p> 
-        <p>{{perfil.telefono}} <a href="/update">update</a></p> 
-        <p>{{perfil.contraseña}} <a href="/update">update</a></p> 
+        <p>{{perfil.nombre}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.apellido}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.sexo}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.fecha_nac}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.correo}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.direccion}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.telefono}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.contraseña}} <a href="{{ url_for('updtUsr.updatePac', id=perfil.id_persona) }}">update</a></p> 
         <a href="{{ url_for('delUsr.delPac', id=perfil.id_persona) }}">Eliminar Cuenta</a>
         <p>---</p>
     </div>
