--- a/templates/registro_paciente.html
+++ b/templates/registro_paciente.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+  {% include 'partials/_message.html' %}
+
   <!-- // -->
   <div>
     <form action="/registro_paciente" method="POST" class="form-control">
