--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Page Tile -->
-    <title>Document</title>
+    <title>Inicio</title>
 
     <!-- Browser tab icon -->
     <link rel="shortcut icon" type="x-icon" href="static\images\Logo.png">
