--- a/templates/login.html
+++ b/templates/login.html
@@ -8,26 +8,35 @@
 </head>
 
 <body>
+
+  <!-- Static title -->
+  <a href="{{ url_for('log.index') }}">Volver</a>
+  <h1>Es un gusto tenerte de nuevo</h1>
   <!-- // -->
+
+  <!-- Form -->
   <div>
     <form action="/login" method="POST" class="form-control">
+        <h2>Por favor ingresa tus datos</h2>
+
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="txt-correo">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
+
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
           <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="txt-contraseña">
         </div>
-        <div class="form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
+        <a href="{{ url_for('password.recovery') }}"><small id="emailHelp" class="form-text text-muted">¿Olvidó su Contraseña?</small></a>
+        <small>¿No tienes una cuenta? <a href="{{ url_for('registro.registroUsuario') }}">Registrese</a></small>
+        
+        <button type="submit" class="btn btn-primary">Aceptar</button>
       </form>
-</div>
+  </div>
 <!-- // -->
+
 
 </body>
 
