DelEspecialista, Especialista profile, Update especialissta and login updated

--- a/templates/del_especialista.html
+++ b/templates/del_especialista.html
@@ -6,6 +6,6 @@
     <title>Eliminar Cuenta Paciente</title>
 </head>
 <body>
-    <p>eliminado el paci catire</p>
+    <p>eliminado el espe catire</p>
 </body>
 </html>
