--- a/templates/ini_especialista.html
+++ b/templates/ini_especialista.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="{{ url_for('perfil.perfilEsp', id=inicio.id_persona)}}">Perfil</a>
+    <p>{{inicio.nombre}}</p>
+    <p>{{inicio.id_persona}}</p>
     <h1>Especialista</h1>
 </body>
 </html>
