--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
     <title>Inicio de Sesion</title>
 </head>
 
@@ -16,23 +16,23 @@
 
   <!-- Form -->
   <div>
-    <form action="/login" method="POST" class="form-control">
+    <form action="/login" method="POST">
         <h2>Por favor ingresa tus datos</h2>
 
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="txt-correo">
+          <input type="email" placeholder="Enter email" name="txt-correo">
         </div>
 
         <div class="form-group">
           <label for="exampleInputPassword1">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name="txt-contraseña">
+          <input type="password" placeholder="Password" name="txt-contraseña">
         </div>
 
         <a href="{{ url_for('password.recovery') }}"><small id="emailHelp" class="form-text text-muted">¿Olvidó su Contraseña?</small></a>
         <small>¿No tienes una cuenta? <a href="{{ url_for('registro.registroUsuario') }}">Registrese</a></small>
         
-        <button type="submit" class="btn btn-primary">Aceptar</button>
+        <button type="submit">Iniciar Sesion</button>
       </form>
   </div>
 <!-- // -->
