--- a/templates/perfil_especialista.html
+++ b/templates/perfil_especialista.html
@@ -7,5 +7,23 @@
 </head>
 <body>
     
+  <!-- Static title -->
+  <a href="{{ url_for('inicio.inicioEsp', id=perfil.id_persona) }}">Volver</a>
+  <h1>Perfil</h1>
+  <!-- // -->
+
+    <div>
+        <p>{{perfil.nombre}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.apellido}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.sexo}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.correo}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p> 
+        <p>{{perfil.telefono}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p>
+        <p>{{perfil.especialidad}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p>
+        <p>{{perfil.contraseña}} <a href="{{ url_for('updtUsr.updateEsp', id=perfil.id_persona) }}">update</a></p> 
+        <a href="{{ url_for('delUsr.delEsp', id=perfil.id_persona) }}">Eliminar Cuenta</a>
+        <a href="{{ url_for('log.logout', id=perfil.id_persona) }}">Cerrar Sesion</a>
+        <p>---</p>
+    </div>
+
 </body>
 </html>
