--- a/templates/registro_especialista.html
+++ b/templates/registro_especialista.html
@@ -28,17 +28,17 @@
 
         <div class="form-group">
           <label>Correo</label>
-          <input type="email" class="form-control" placeholder="Enter email" name="txt-correo-esp">
+          <input type="email" class="form-control" placeholder="Enter email" name="txt-correo-esp" required>
         </div>
 
         <div class="form-group">
           <label>Nombre</label>
-          <input type="text" class="form-control" placeholder="Nombre" name="txt-nombre-esp">
+          <input type="text" class="form-control" placeholder="Nombre" name="txt-nombre-esp" required>
         </div>
 
         <div class="form-group">
             <label>Apellido</label>
-            <input type="text" class="form-control" placeholder="Apellido" name="txt-apellido-esp">
+            <input type="text" class="form-control" placeholder="Apellido" name="txt-apellido-esp" required>
         </div>
 
         <div class="form-group">
@@ -52,19 +52,19 @@
         <div class="form-group">
             <label>Contraseña</label>
             <div class="input-group">
-                <input type="password" class="form-control" placeholder="Password" name="txt-contraseña-esp" id="passwordField">
+                <input type="password" class="form-control" placeholder="Password" name="txt-contraseña-esp" id="passwordField" required>
                 <button type="button" id="togglePassword" class="btn btn-secondary">Mostrar</button>
             </div>
           </div>
 
         <div class="form-group">
             <label>Telefono</label>
-            <input type="number" class="form-control" placeholder="02123232123" name="txt-telefono-esp">
+            <input type="number" class="form-control" placeholder="02123232123" name="txt-telefono-esp" required>
         </div>
 
         <div class="form-group">
             <label>Especialidad</label>
-            <input type="text" class="form-control" placeholder="Nutricionista" name="txt-especialidad-esp">
+            <input type="text" class="form-control" placeholder="Nutricionista" name="txt-especialidad-esp" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Aceptar</button>
