--- a/templates/registro_paciente.html
+++ b/templates/registro_paciente.html
@@ -27,17 +27,17 @@
 
         <div class="form-group">
           <label>Correo</label>
-          <input type="email" class="form-control" placeholder="Enter email" name="txt-correo-pac">
+          <input type="email" class="form-control" placeholder="Enter email" name="txt-correo-pac" required>
         </div>
 
         <div class="form-group">
           <label>Nombre</label>
-          <input type="text" class="form-control" placeholder="Nombre" name="txt-nombre-pac">
+          <input type="text" class="form-control" placeholder="Nombre" name="txt-nombre-pac" required>
         </div>
 
         <div class="form-group">
             <label>Apellido</label>
-            <input type="text" class="form-control" placeholder="Apellido" name="txt-apellido-pac">
+            <input type="text" class="form-control" placeholder="Apellido" name="txt-apellido-pac" required>
         </div>
 
         <div class="form-group">
@@ -51,19 +51,19 @@
         <div class="form-group">
           <label>Contraseña</label>
           <div class="input-group">
-              <input type="password" class="form-control" placeholder="Password" name="txt-contraseña-pac" id="passwordField">
+              <input type="password" class="form-control" placeholder="Password" name="txt-contraseña-pac" id="passwordField" required>
               <button type="button" id="togglePassword" class="btn btn-secondary">Mostrar</button>
           </div>
         </div>
 
         <div class="form-group">
             <label>Fecha de Nacimiento</label>
-            <input type="date" class="form-control" name="txt-fechaNac-pac">
+            <input type="date" class="form-control" name="txt-fechaNac-pac" required>
         </div>
 
         <div class="form-group">
             <label>Telefono</label>
-            <input type="number" class="form-control" placeholder="0414231333" name="txt-telefono-pac">
+            <input type="number" class="form-control" placeholder="0414231333" name="txt-telefono-pac" required>
         </div>
 
         <button type="submit" class="btn btn-primary">Aceptar</button>
