--- a/templates/ini_especialista.html
+++ b/templates/ini_especialista.html
@@ -9,8 +9,52 @@
     <h1>Mis Pacientes</h1>
     <h3>{{ formatted_date }}</h3>
     <a href="{{ url_for('perfil.perfilEsp', id=inicio.id_persona)}}">Perfil</a>
+
+
+    <!-- FIXME: Revisar si cuando elimino un paciente se elimina la persona de la BD -->
+    <!-- Lista de pacientes -->
+    <ul>
+        {% for resultado in resultados %}
+        {% set edad = (today.year - resultado.fecha_nac.year - ((today.month, today.day) < (resultado.fecha_nac.month, resultado.fecha_nac.day))) %}
+        <p>{{ resultado.nombre }} {{ resultado.apellido }} {{ edad }} <a href="{{ url_for('inicio.detallePac', id=inicio.id_persona) }}">></a> <a href="{{ url_for('inicio.detallePac', id=inicio.id_persona) }}">delete</a></li></p>
+        {% endfor %}
+    </ul>
+    <!-- // -->
+
+    <h1>---Borrar---</h1>
+
+    <!-- FIXME: Eliminar-->
+    <!-- data from the person -->
     <p>{{inicio.nombre}}</p>
     <p>{{inicio.id_persona}}</p>
     <h1>Especialista</h1>
+    <!-- // -->
+
+    <!-- TODO: Seria bueno colocar esto en una plantilla-->
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li>
+            <a href="/especialista">
+                <i class="fas fa-user-md"></i>
+                <span>Pacientes</span>
+            </a>
+            </li>
+            <li>
+            <a href="/inicio">
+                <i class="fas fa-home"></i>
+                <span>Principal</span>
+            </a>
+            </li>
+            <li>
+            <a href="{{url_for('comida.comidaPac', id=inicio.id_persona)}}">
+                <i class="fas fa-utensils"></i>
+                <span>Recetas</span>
+            </a>
+            </li>
+        </ul>
+    </nav>
+    <!-- -- -->
+
 </body>
 </html>
