Comment and Satisfaction fixed

--- a/templates/dc_paciente.html
+++ b/templates/dc_paciente.html
@@ -87,12 +87,8 @@
 
         <div>--</div>
 
-        <!-- FIXME: No se muestran estos datos en pantalla-->
-        {% for result in results %}
-            <h4>{{results.satisfaccion}}</h4>
-            <h4>{{results.comentario}}</h4>        
-        {% endfor %}
-
+        <p>{{opinion.satisfaccion}}</p>
+        <p>{{opinion.comentario}}</p>
 
 </body>
 </html>
