--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,77 @@
 
 {% block body %}
   <!-- Text Area -->
-    <h1>Bienvenido</h1>
-    <h4>Descubre un camino hacia una alimentación saludable y equilibrada. Aprende a nutrir tu cuerpo de manera consciente, alcanza un bienestar integral</h4>
+    <body class="bg-gradient-primary">
 
-    <!-- Buttons -->
-    <a href="{{ url_for('index.login') }}">Iniciar Sesion</a>
-    <a href="{{ url_for('index.registro') }}">Registrarse</a>
+      <div class="container">
+  
+          <!-- Outer Row -->
+          <div class="row justify-content-center">
+  
+              <div class="col-xl-10 col-lg-12 col-md-9">
+  
+                  <div class="card o-hidden border-0 shadow-lg my-5">
+                      <div class="card-body p-0">
+                          <!-- Nested Row within Card Body -->
+                          <div class="row">
+                              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+                              <div class="col-lg-6">
+                                  <div class="p-5">
+                                      <div class="text-center">
+                                          <h1 class="h4 text-gray-900 mb-4">Bienvenido de vuelta!</h1>
+                                      </div>
+                                      <form class="user">
+                                          <div class="form-group">
+                                              <input type="email" class="form-control form-control-user"
+                                                  id="exampleInputEmail" aria-describedby="emailHelp"
+                                                  placeholder="Enter Email Address...">
+                                          </div>
+                                          <div class="form-group">
+                                              <input type="password" class="form-control form-control-user"
+                                                  id="exampleInputPassword" placeholder="Password">
+                                          </div>
+                                          <!-- <div class="form-group"> TODO: Hacer que funcione el checkbox
+                                              <div class="custom-control custom-checkbox small">
+                                                  <input type="checkbox" class="custom-control-input" id="customCheck">
+                                                  <label class="custom-control-label" for="customCheck">Remember
+                                                      Me</label>
+                                              </div>
+                                          </div> -->
+                                          <a href="{{ url_for('index.login') }}" class="btn btn-primary btn-user btn-block">
+                                              Iniciar Sesion
+                                          </a>
+                                          <hr>
+                                      </form>
+                                    
+                                      <div class="text-center">
+                                          <a class="small" href="forgot-password.html">Olvidaste tu contraseña?</a>
+                                      </div>
+                                      <div class="text-center">
+                                          <a class="small" href="{{ url_for('index.registro') }}">Crea una cuenta!</a>
+                                      </div>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+  
+              </div>
+  
+          </div>
+  
+      </div>
+  
+      <!-- Bootstrap core JavaScript-->
+      <script src="vendor/jquery/jquery.min.js"></script>
+      <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  
+      <!-- Core plugin JavaScript-->
+      <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  
+      <!-- Custom scripts for all pages-->
+      <script src="js/sb-admin-2.min.js"></script>
+  
+  </body>
+
 
 {% endblock %}
